force-app/main/default/objects/SystemConfiguration__c/SystemConfiguration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Stores configuration for the Salesforce platform. This is intended to offer technical controls to administrators like a validation rule bypass at a user, profile, or org level.</description>
    <label>System configuration</label>
</CustomObject>