force-app/main/default/objects/SystemConfiguration__c/fields/FlowBypass__c.field-meta.xml
<CustomField>
    <fullName>FlowBypass__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, flows that reference this setting will not run.</description>
    <inlineHelpText>When checked, flows that reference this setting will not run</inlineHelpText>
    <label>Flow bypass</label>
    <type>Checkbox</type>
</CustomField>