force-app/main/default/objects/SystemConfiguration__c/fields/TriggerBypass__c.field-meta.xml
<CustomField>
    <fullName>TriggerBypass__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, triggers that reference this setting will not run.</description>
    <inlineHelpText>When checked, triggers that reference this setting will not run</inlineHelpText>
    <label>Trigger bypass</label>
    <type>Checkbox</type>
</CustomField>