force-app/main/default/objects/SystemConfiguration__c/fields/ValidationBypass__c.field-meta.xml
<CustomField>
    <fullName>ValidationBypass__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, validation rules that reference this setting will not run.</description>
    <inlineHelpText>When checked, validation rules that reference this setting will not run</inlineHelpText>
    <label>Validation bypass</label>
    <type>Checkbox</type>
</CustomField>